# nds-ware

./: CHANGELOG.md  LICENSE  Makefile  README.md  extract_narc.py  extract_nds.py  pyproject.toml
.github/workflows/: release.yml
definitions/: g2d.ksy  narc.ksy  nds.ksy
ghidra-extension/: .gitignore  build.gradle  extension.properties
ghidra-extension/src/main/java/ndsware/: FileDataPanel.java  FileDataRow.java  FileDataTableModel.java  NdsFileSystemProvider.java  NdswareAnalyzer.java  NdswareExporter.java  NdswareFileSystem.java  NdswareLoader.java  NdswarePlugin.java
ghidra-extension/src/main/java/ndsware/filesystem/: FileDataPanel.java  FileDataRow.java  FileDataTableModel.java  FileNode.java  NdsFileSystemProvider.java
ghidra-extension/src/main/java/ndsware/nitrosdk/: AnalyseLibraryTask.java  CircleIcon.java  LibraryNode.java  NitroSdkProvider.java
java-package/src/com/ndsware/parsers/: Narc.java  Nds.java
java-package/src/ndsware/parsers/: Narc.java  Nds.java
parsers/: narc.py  nds.py
python-package/: pyproject.toml
python-package/src/ndsware/: extract_graphics.py  extract_narc.py  extract_nds.py
python-package/src/ndsware/parsers/: g2d.py  nds.py
src/ndsware/: extract_nds.py
src/ndsware/parsers/: nds.py
