[project]
name = "ndsware"
version = "1.1.0"
description = "A suite of tools for reverse engineering Nintendo games"
authors = [{ name="CodeDragon82" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click >=8.1.7",
  "kaitaistruct >=0.10",
  "tabulate >=0.9.0",
  "pillow >=11.0.0"
]

[project.scripts]
extract_nds = "ndsware.extract_nds:cli"
extract_narc = "ndsware.extract_narc:cli"
extract_graphics = "ndsware.extract_graphics:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"